[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/ReportScenes/ReportButton.gd" type="Script" id=1]

[node name="ReportButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -599.0
margin_bottom = -570.0
rect_min_size = Vector2( 440, 30 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 120, 0 )
mouse_filter = 2

[node name="labelID" type="Label" parent="HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 20 )
size_flags_vertical = 5
text = "777"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 34.0
margin_right = 38.0
margin_bottom = 30.0
mouse_filter = 2

[node name="labelSignIn" type="Label" parent="HBoxContainer"]
margin_left = 42.0
margin_right = 181.0
margin_bottom = 30.0
rect_min_size = Vector2( 135, 0 )
size_flags_horizontal = 3
size_flags_vertical = 5
text = "77/77/7777 77:77"
align = 1
valign = 1

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 185.0
margin_right = 189.0
margin_bottom = 30.0
mouse_filter = 2

[node name="labelSignOut" type="Label" parent="HBoxContainer"]
margin_left = 193.0
margin_top = 8.0
margin_right = 332.0
margin_bottom = 22.0
rect_min_size = Vector2( 135, 0 )
size_flags_horizontal = 3
text = "77/77/7777 77:77"
align = 1
valign = 1

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
margin_left = 336.0
margin_right = 340.0
margin_bottom = 30.0
mouse_filter = 2

[node name="labelTimeWorked" type="Label" parent="HBoxContainer"]
margin_left = 344.0
margin_top = 8.0
margin_right = 439.0
margin_bottom = 22.0
rect_min_size = Vector2( 95, 0 )
text = "Hours Worked"
align = 1
valign = 1
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
